Readme,disable user text select inside calendar
Desired effect reached by using user-select: none; on all
calendar prefixed classes, this improves expected UX

Modified readme for 24hour formating

--- a/lib/scss/material-datetime-picker.scss
+++ b/lib/scss/material-datetime-picker.scss
@@ -17,6 +17,10 @@ $primary: #00bcd4 !default;
   }
 }
 
+[class^="c-datepicker"] {
+  user-select: none;
+}
+
 .c-datepicker {
   min-height: 610px;
   position: fixed;
